test/parser/mixed-case-hex-literal.cx
// RUN: %not %cx -parse %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:16: error: mixed letter case in hex literal
    var i = 0xfF;
}
